--- a/modulo3/views/about.njk
+++ b/modulo3/views/about.njk
@@ -1,20 +1,10 @@
-<!DOCTYPE html>
-<html>
+{% extends "layout.njk" %}
 
-<head>
-    <title>JG Consultoria </title>
+{% block head %} 
+    <title>Sobre - JG Consultoria </title>
+{% endblock %}
 
-    <link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-    <header>
-
-        <div class="links">
-            <a href="index.html">Sobre</a>
-            <a href="classes.html">Aulas</a>
-        </div>
-    </header>
+{% block content %}
 
     <div id="wrapper">
         <img src="https://media-exp1.licdn.com/dms/image/C4D03AQFdyxT51d8UuQ/profile-displayphoto-shrink_200_200/0?e=1611187200&v=beta&t=P56ksHB_padnvkRSEC1eLV867Ri68z-CzZkxinAtwZU"
@@ -31,6 +21,5 @@
             target="_blank">Lattes</a>
         <a href="https://www.instagram.com/jacquelinegerageconsultoria/?hl=pt-br" target="_blank">Instagram</a>
     </div>
-</body>
 
-</html>
+{% endblock %}
