--- a/modulo3/public/styles.css
+++ b/modulo3/public/styles.css
@@ -96,6 +96,7 @@ header {
 
 .card{
     background-color: darkslategray;
+    display: grid;
 }
 .card__image-container img{
     width: 100%;
@@ -108,6 +109,7 @@ header {
 .card__info{
     display: grid;
     grid-template-columns:  1fr 1fr;
+    align-items: center;
 }
 
 .card__price{
